--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>RSSchool CV</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="CSS/style.css">
 </head>
-<body>
-   
+<body class="body">
+   <header class="header">
+      <div class="wrapper">
+         <nav class="header-nav">
+            <ul class="header-list">
+               <li class="header-item"><a href="#" class="header-link">ABOUT ME</a></li>
+               <li class="header-item"><a href="#" class="header-link">CONTACTS</a></li>
+               <li class="header-item"><a href="#" class="header-link">EXPERIENCE</a></li>
+               <li class="header-item"><a href="#" class="header-link">LANGUAGES</a></li>
+               <li class="header-item"><a href="#" class="header-link">EDUCATION</a></li>
+               <li class="header-item"><a href="#" class="header-link">SKILLS</a></li>
+            </ul>
+         </nav>
+         <div class="header-content">
+            <div class="left-column">
+               <img src="#" alt="My Photo" class="header-img">
+            </div>
+            <div class="right-column">
+               <h1 class="header-title">SAIDRASUL <span>SULTANBAEV</span></h1>
+               <p class="header-text">BEGINNER FRONTEND DEVELOPER</p>
+            </div>
+         </div>
+      </div>
+   </header>
+   <main class="main">
+      <div class="wrapper">
+         <div class="left-column">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores possimus beatae maxime? Culpa quos magni ad, quisquam ratione repellat a beatae aspernatur error facilis enim eligendi labore vitae aut odio voluptates sed explicabo corrupti quam est fugiat consequatur eum magnam distinctio. Expedita, quis optio! Suscipit quae fugiat officia reiciendis ipsam incidunt, vero sit est nemo similique ut pariatur voluptatem quaerat ratione voluptates animi nulla. Incidunt esse distinctio magnam consequuntur rem recusandae maiores obcaecati. Enim in soluta quae ducimus perspiciatis commodi consectetur consequuntur veniam nulla nisi accusantium, minima, totam tempora similique fugiat officia cumque reprehenderit sit, facilis inventore nobis sed. Animi qui, ab dolorum voluptatem voluptates modi harum natus commodi? Ducimus hic voluptatem ipsam totam sequi quidem eius numquam minima ratione provident dolores cumque est ipsa officiis debitis nam necessitatibus non praesentium, laborum at recusandae quaerat obcaecati? Aperiam iste consequatur rem adipisci similique odit est modi, placeat molestiae quas nulla amet ipsa reiciendis consectetur accusantium illo, aspernatur sunt qui? Animi sint consequuntur quidem sequi. Dolore illum doloremque laborum incidunt sequi eligendi consectetur animi et qui quis error excepturi quidem minus officia beatae autem quos, iure praesentium, corporis cum, eius quia sapiente. Fuga maxime sequi sapiente consequatur, id illo architecto a.</p>
+            <p class="1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores possimus beatae maxime? Culpa quos magni ad, quisquam ratione repellat a beatae aspernatur error facilis enim eligendi labore vitae aut odio voluptates sed explicabo corrupti quam est fugiat consequatur eum magnam distinctio. Expedita, quis optio! Suscipit quae fugiat officia reiciendis ipsam incidunt, vero sit est nemo similique ut pariatur voluptatem quaerat ratione voluptates animi nulla. Incidunt esse distinctio magnam consequuntur rem recusandae maiores obcaecati. Enim in soluta quae ducimus perspiciatis commodi consectetur consequuntur veniam nulla nisi accusantium, minima, totam tempora similique fugiat officia cumque reprehenderit sit, facilis inventore nobis sed. Animi qui, ab dolorum voluptatem voluptates modi harum natus commodi? Ducimus hic voluptatem ipsam totam sequi quidem eius numquam minima ratione provident dolores cumque est ipsa officiis debitis nam necessitatibus non praesentium, laborum at recusandae quaerat obcaecati? Aperiam iste consequatur rem adipisci similique odit est modi, placeat molestiae quas nulla amet ipsa reiciendis consectetur accusantium illo, aspernatur sunt qui? Animi sint consequuntur quidem sequi. Dolore illum doloremque laborum incidunt sequi eligendi consectetur animi et qui quis error excepturi quidem minus officia beatae autem quos, iure praesentium, corporis cum, eius quia sapiente. Fuga maxime sequi sapiente consequatur, id illo architecto a.</p>
+         </div>
+         <div class="right-column">
+            <div class="main-content">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores possimus beatae maxime? Culpa quos magni ad, quisquam ratione repellat a beatae aspernatur error facilis enim eligendi labore vitae aut odio voluptates sed explicabo corrupti quam est fugiat consequatur eum magnam distinctio. Expedita, quis optio! Suscipit quae fugiat officia reiciendis ipsam incidunt, vero sit est nemo similique ut pariatur voluptatem quaerat ratione voluptates animi nulla. Incidunt esse distinctio magnam consequuntur rem recusandae maiores obcaecati. Enim in soluta quae ducimus perspiciatis commodi consectetur consequuntur veniam nulla nisi accusantium, minima, totam tempora similique fugiat officia cumque reprehenderit sit, facilis inventore nobis sed. Animi qui, ab dolorum voluptatem voluptates modi harum natus commodi? Ducimus hic voluptatem ipsam totam sequi quidem eius numquam minima ratione provident dolores cumque est ipsa officiis debitis nam necessitatibus non praesentium, laborum at recusandae quaerat obcaecati? Aperiam iste consequatur rem adipisci similique odit est modi, placeat molestiae quas nulla amet ipsa reiciendis consectetur accusantium illo, aspernatur sunt qui? Animi sint consequuntur quidem sequi. Dolore illum doloremque laborum incidunt sequi eligendi consectetur animi et qui quis error excepturi quidem minus officia beatae autem quos, iure praesentium, corporis cum, eius quia sapiente. Fuga maxime sequi sapiente consequatur, id illo architecto a.</p>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores possimus beatae maxime? Culpa quos magni ad, quisquam ratione repellat a beatae aspernatur error facilis enim eligendi labore vitae aut odio voluptates sed explicabo corrupti quam est fugiat consequatur eum magnam distinctio. Expedita, quis optio! Suscipit quae fugiat officia reiciendis ipsam incidunt, vero sit est nemo similique ut pariatur voluptatem quaerat ratione voluptates animi nulla. Incidunt esse distinctio magnam consequuntur rem recusandae maiores obcaecati. Enim in soluta quae ducimus perspiciatis commodi consectetur consequuntur veniam nulla nisi accusantium, minima, totam tempora similique fugiat officia cumque reprehenderit sit, facilis inventore nobis sed. Animi qui, ab dolorum voluptatem voluptates modi harum natus commodi? Ducimus hic voluptatem ipsam totam sequi quidem eius numquam minima ratione provident dolores cumque est ipsa officiis debitis nam necessitatibus non praesentium, laborum at recusandae quaerat obcaecati? Aperiam iste consequatur rem adipisci similique odit est modi, placeat molestiae quas nulla amet ipsa reiciendis consectetur accusantium illo, aspernatur sunt qui? Animi sint consequuntur quidem sequi. Dolore illum doloremque laborum incidunt sequi eligendi consectetur animi et qui quis error excepturi quidem minus officia beatae autem quos, iure praesentium, corporis cum, eius quia sapiente. Fuga maxime sequi sapiente consequatur, id illo architecto a.</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </main>
 </body>
 </html>
