feat: add content info

--- a/index.html
+++ b/index.html
@@ -11,43 +11,52 @@
    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body class="body">
-   <header class="header">
-      <div class="wrapper">
-         <nav class="header-nav">
-            <ul class="header-list">
-               <li class="header-item"><a href="#" class="header-link">ABOUT ME</a></li>
-               <li class="header-item"><a href="#" class="header-link">CONTACTS</a></li>
-               <li class="header-item"><a href="#" class="header-link">EXPERIENCE</a></li>
-               <li class="header-item"><a href="#" class="header-link">LANGUAGES</a></li>
-               <li class="header-item"><a href="#" class="header-link">EDUCATION</a></li>
-               <li class="header-item"><a href="#" class="header-link">SKILLS</a></li>
-            </ul>
-         </nav>
-         <div class="header-content">
-            <div class="left-column">
-               <img src="#" alt="My Photo" class="header-img">
-            </div>
-            <div class="right-column">
-               <h1 class="header-title">SAIDRASUL <span>SULTANBAEV</span></h1>
-               <p class="header-text">BEGINNER FRONTEND DEVELOPER</p>
-            </div>
-         </div>
-      </div>
-   </header>
-   <main class="main">
-      <div class="wrapper">
-         <div class="left-column">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores possimus beatae maxime? Culpa quos magni ad, quisquam ratione repellat a beatae aspernatur error facilis enim eligendi labore vitae aut odio voluptates sed explicabo corrupti quam est fugiat consequatur eum magnam distinctio. Expedita, quis optio! Suscipit quae fugiat officia reiciendis ipsam incidunt, vero sit est nemo similique ut pariatur voluptatem quaerat ratione voluptates animi nulla. Incidunt esse distinctio magnam consequuntur rem recusandae maiores obcaecati. Enim in soluta quae ducimus perspiciatis commodi consectetur consequuntur veniam nulla nisi accusantium, minima, totam tempora similique fugiat officia cumque reprehenderit sit, facilis inventore nobis sed. Animi qui, ab dolorum voluptatem voluptates modi harum natus commodi? Ducimus hic voluptatem ipsam totam sequi quidem eius numquam minima ratione provident dolores cumque est ipsa officiis debitis nam necessitatibus non praesentium, laborum at recusandae quaerat obcaecati? Aperiam iste consequatur rem adipisci similique odit est modi, placeat molestiae quas nulla amet ipsa reiciendis consectetur accusantium illo, aspernatur sunt qui? Animi sint consequuntur quidem sequi. Dolore illum doloremque laborum incidunt sequi eligendi consectetur animi et qui quis error excepturi quidem minus officia beatae autem quos, iure praesentium, corporis cum, eius quia sapiente. Fuga maxime sequi sapiente consequatur, id illo architecto a.</p>
-            <p class="1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores possimus beatae maxime? Culpa quos magni ad, quisquam ratione repellat a beatae aspernatur error facilis enim eligendi labore vitae aut odio voluptates sed explicabo corrupti quam est fugiat consequatur eum magnam distinctio. Expedita, quis optio! Suscipit quae fugiat officia reiciendis ipsam incidunt, vero sit est nemo similique ut pariatur voluptatem quaerat ratione voluptates animi nulla. Incidunt esse distinctio magnam consequuntur rem recusandae maiores obcaecati. Enim in soluta quae ducimus perspiciatis commodi consectetur consequuntur veniam nulla nisi accusantium, minima, totam tempora similique fugiat officia cumque reprehenderit sit, facilis inventore nobis sed. Animi qui, ab dolorum voluptatem voluptates modi harum natus commodi? Ducimus hic voluptatem ipsam totam sequi quidem eius numquam minima ratione provident dolores cumque est ipsa officiis debitis nam necessitatibus non praesentium, laborum at recusandae quaerat obcaecati? Aperiam iste consequatur rem adipisci similique odit est modi, placeat molestiae quas nulla amet ipsa reiciendis consectetur accusantium illo, aspernatur sunt qui? Animi sint consequuntur quidem sequi. Dolore illum doloremque laborum incidunt sequi eligendi consectetur animi et qui quis error excepturi quidem minus officia beatae autem quos, iure praesentium, corporis cum, eius quia sapiente. Fuga maxime sequi sapiente consequatur, id illo architecto a.</p>
-         </div>
-         <div class="right-column">
-            <div class="main-content">
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores possimus beatae maxime? Culpa quos magni ad, quisquam ratione repellat a beatae aspernatur error facilis enim eligendi labore vitae aut odio voluptates sed explicabo corrupti quam est fugiat consequatur eum magnam distinctio. Expedita, quis optio! Suscipit quae fugiat officia reiciendis ipsam incidunt, vero sit est nemo similique ut pariatur voluptatem quaerat ratione voluptates animi nulla. Incidunt esse distinctio magnam consequuntur rem recusandae maiores obcaecati. Enim in soluta quae ducimus perspiciatis commodi consectetur consequuntur veniam nulla nisi accusantium, minima, totam tempora similique fugiat officia cumque reprehenderit sit, facilis inventore nobis sed. Animi qui, ab dolorum voluptatem voluptates modi harum natus commodi? Ducimus hic voluptatem ipsam totam sequi quidem eius numquam minima ratione provident dolores cumque est ipsa officiis debitis nam necessitatibus non praesentium, laborum at recusandae quaerat obcaecati? Aperiam iste consequatur rem adipisci similique odit est modi, placeat molestiae quas nulla amet ipsa reiciendis consectetur accusantium illo, aspernatur sunt qui? Animi sint consequuntur quidem sequi. Dolore illum doloremque laborum incidunt sequi eligendi consectetur animi et qui quis error excepturi quidem minus officia beatae autem quos, iure praesentium, corporis cum, eius quia sapiente. Fuga maxime sequi sapiente consequatur, id illo architecto a.</p>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores possimus beatae maxime? Culpa quos magni ad, quisquam ratione repellat a beatae aspernatur error facilis enim eligendi labore vitae aut odio voluptates sed explicabo corrupti quam est fugiat consequatur eum magnam distinctio. Expedita, quis optio! Suscipit quae fugiat officia reiciendis ipsam incidunt, vero sit est nemo similique ut pariatur voluptatem quaerat ratione voluptates animi nulla. Incidunt esse distinctio magnam consequuntur rem recusandae maiores obcaecati. Enim in soluta quae ducimus perspiciatis commodi consectetur consequuntur veniam nulla nisi accusantium, minima, totam tempora similique fugiat officia cumque reprehenderit sit, facilis inventore nobis sed. Animi qui, ab dolorum voluptatem voluptates modi harum natus commodi? Ducimus hic voluptatem ipsam totam sequi quidem eius numquam minima ratione provident dolores cumque est ipsa officiis debitis nam necessitatibus non praesentium, laborum at recusandae quaerat obcaecati? Aperiam iste consequatur rem adipisci similique odit est modi, placeat molestiae quas nulla amet ipsa reiciendis consectetur accusantium illo, aspernatur sunt qui? Animi sint consequuntur quidem sequi. Dolore illum doloremque laborum incidunt sequi eligendi consectetur animi et qui quis error excepturi quidem minus officia beatae autem quos, iure praesentium, corporis cum, eius quia sapiente. Fuga maxime sequi sapiente consequatur, id illo architecto a.</p>
+   <div class="wrapper">
+      <header class="header">
+         <!-- <div class="wrapper"> -->
+            <nav class="header-nav">
+               <ul class="header-list">
+                  <li class="header-item"><a href="#" class="header-link">ABOUT ME</a></li>
+                  <li class="header-item"><a href="#" class="header-link">CONTACTS</a></li>
+                  <li class="header-item"><a href="#" class="header-link">EXPERIENCE</a></li>
+                  <li class="header-item"><a href="#" class="header-link">LANGUAGES</a></li>
+                  <li class="header-item"><a href="#" class="header-link">EDUCATION</a></li>
+                  <li class="header-item"><a href="#" class="header-link">SKILLS</a></li>
+               </ul>
+            </nav>
+            <div class="header-content">
+               <div class="header-image"><img src="" alt="My Photo" class="header-img"></div>
+               <div>
+                  <h1 class="header-title">SAIDRASUL <span>SULTANBAEV</span></h1>
+                  <p class="header-text">BEGINNER FRONTEND DEVELOPER</p>
                </div>
             </div>
+         <!-- </div> -->
+      </header>
+      <main class="main">
+         <div class="left-column column-dark">
+            <div class="dark">
+               <section class="main-contacts-info onered red-top">
+                  <h2 class="main-contacts-title">CONTACTS</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.</p>
+               </section>
+               <section class="main-contacts-info medium">
+                  <h2 class="main-contacts-title">CONTACTS</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.</p>
+               </section>
+               <section class="main-contacts-info red-bottom">
+                  <h2 class="main-contacts-title">CONTACTS</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.</p>
+               </section>
+            </div>
          </div>
-      </div>
-   </main>
+         <div class="right-column column-white">
+            <section class="main-contacts-info right-section">
+               <h2 class="main-contacts-title">CONTACTS</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.</p>
+            </section>
+         </div>
+      </main>
+   </div>
 </body>
 </html>
