--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
                </ul>
             </nav>
             <div class="header-content">
-               <div class="header-image"><img src="" alt="My Photo" class="header-img"></div>
-               <div>
-                  <h1 class="header-title">SAIDRASUL <span>SULTANBAEV</span></h1>
-                  <p class="header-text">BEGINNER FRONTEND DEVELOPER</p>
+               <div class="left-column">
+                  <div class="header-image"><img src="" alt="My Photo" class="header-img">
+                  </div>
+               </div>
+               <div class="right-column">
+                  <div>
+                     <h1 class="header-title">SAIDRASUL <span>SULTANBAEV</span></h1>
+                     <p class="header-text">BEGINNER FRONTEND DEVELOPER</p>
+                  </div>
                </div>
             </div>
          <!-- </div> -->
@@ -36,27 +41,38 @@
       <main class="main">
          <div class="left-column column-dark">
             <div class="dark">
-               <section class="main-contacts-info onered red-top">
+               <section class="main-contacts-info red-top">
                   <h2 class="main-contacts-title">CONTACTS</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.</p>
                </section>
-               <section class="main-contacts-info medium">
-                  <h2 class="main-contacts-title">CONTACTS</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.</p>
-               </section>
+               <div class="bgc-red">
+                  <section class="main-contacts-info dark-medium">
+                     <h2 class="main-contacts-title">CONTACTS</h2>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.</p>
+                  </section>
+               </div>
                <section class="main-contacts-info red-bottom">
                   <h2 class="main-contacts-title">CONTACTS</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.</p>
                </section>
             </div>
          </div>
          <div class="right-column column-white">
             <section class="main-contacts-info right-section">
                <h2 class="main-contacts-title">CONTACTS</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.</p>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.</p>
             </section>
          </div>
       </main>
+      <footer class="footer">
+         <div class="footer-content content">
+            <div class="left-column">
+               <section class="footer-left">
+                  <p class="footer-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quam ipsum vitae neque. Consectetur ullam nihil ducimus repellendus excepturi, ratione dolores officiis eligendi fuga magnam possimus obcaecati delectus doloribus facilis dolorem nam vitae cumque quisquam illo facere doloremque quos! Illum, dicta sequi facilis hic provident et voluptatum blanditiis. Consequatur, reprehenderit doloribus accusantium voluptates ipsam modi. Accusamus voluptatibus ipsa deserunt, itaque consequatur tenetur veniam nihil unde, porro accusantium placeat debitis eligendi dolor aliquam quidem quae ipsam inventore cum tempore fugiat, cumque quibusdam. Dolorum, adipisci atque! Autem, reiciendis ut a aliquam ab sapiente aut culpa odio maxime possimus voluptatum magni repellendus nostrum.</p>
+               </section>
+            </div>
+         </div>
+      </footer>
    </div>
 </body>
 </html>
