feat: complete sidebar

--- a/index.html
+++ b/index.html
@@ -5,61 +5,74 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>RSSchool CV</title>
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://spans.googleapis.com">
+   <link rel="preconnect" href="https://spans.gstatic.com" crossorigin>
+   <link href="https://spans.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body class="body">
    <div class="wrapper">
       <header class="header">
-         <!-- <div class="wrapper"> -->
-            <nav class="header-nav">
-               <ul class="header-list">
-                  <li class="header-item"><a href="#" class="header-link">ABOUT ME</a></li>
-                  <li class="header-item"><a href="#" class="header-link">CONTACTS</a></li>
-                  <li class="header-item"><a href="#" class="header-link">EXPERIENCE</a></li>
-                  <li class="header-item"><a href="#" class="header-link">LANGUAGES</a></li>
-                  <li class="header-item"><a href="#" class="header-link">EDUCATION</a></li>
-                  <li class="header-item"><a href="#" class="header-link">SKILLS</a></li>
-               </ul>
-            </nav>
-            <div class="header-content">
-               <div class="left-column">
-                  <div class="header-image"><img src="" alt="My Photo" class="header-img">
-                  </div>
-               </div>
-               <div class="right-column">
-                  <div>
-                     <h1 class="header-title">SAIDRASUL <span>SULTANBAEV</span></h1>
-                     <p class="header-text">BEGINNER FRONTEND DEVELOPER</p>
-                  </div>
+         <nav class="header-nav">
+            <ul class="header-list">
+               <li class="header-item"><a href="#" class="header-link">ABOUT ME</a></li>
+               <li class="header-item"><a href="#contacts" class="header-link">CONTACTS</a></li>
+               <li class="header-item"><a href="#languages" class="header-link">LANGUAGES</a></li>
+               <li class="header-item"><a href="#" class="header-link">EDUCATION</a></li>
+               <li class="header-item"><a href="#" class="header-link">SKILLS</a></li>
+            </ul>
+         </nav>
+         <div class="header-content">
+            <div class="left-column">
+               <div class="header-image"><img src="#" alt="My Photo" class="header-img">
                </div>
             </div>
-         <!-- </div> -->
+            <div class="right-column">
+               <div>
+                  <h1 class="header-title">SAIDRASUL <span>SULTANBAEV</span></h1>
+                  <p class="header-text">BEGINNER FRONTEND DEVELOPER</p>
+               </div>
+            </div>
+         </div>
       </header>
       <main class="main">
          <div class="left-column column-dark">
             <div class="dark">
-               <section class="main-contacts-info red-top">
-                  <h2 class="main-contacts-title">CONTACTS</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.</p>
+               <section class="main-contacts-info red-top main-sections" id="contacts">
+                  <h2 class="main-contacts-title main-titles">CONTACTS</h2>
+                  <ul class="main-contacts-list">
+                     <li class="main-contacts-item">Phone:<a href="tel:+998931191199" class="main-contacts-link">+998 (93) 119-11-99</a></li>
+                     <li class="main-contacts-item">GMAIL:<a href="mailto:saidtasul99@gmail.com" class="main-contacts-link">saidtasul99@gmail.com</a></li>
+                     <li class="main-contacts-item">Telegram:<a href="https://t.me/sultanbaev1" class="main-contacts-link">Saidrasul Sultanbaev</a></li>
+                     <li class="main-contacts-item">GitHub:<a href="https://github.com/SultanbaevS/" class="main-contacts-link">SultanbaevS</a></li>
+                     <li class="main-contacts-item">Discord:<a href="https://discord.com/@Said_S" class="main-contacts-link">Said_S</a></li>
+                  </ul>
                </section>
                <div class="bgc-red">
-                  <section class="main-contacts-info dark-medium">
-                     <h2 class="main-contacts-title">CONTACTS</h2>
-                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.</p>
+                  <section class="main-languages-info dark-medium main-sections" id="languages">
+                     <h2 class="main-languages-title main-titles">LANGUAGES</h2>
+                     <ul class="main-languages-list">
+                        <li class="main-languages-item">Uzbek:<span class="star checked">&#9733;&#9733;&#9733;&#9733;&#9733;</span></li>
+                        <li class="main-languages-item">Rusian:<span class="star checked">&#9733;&#9733;&#9733;&#9733;&#9733;</span></li>
+                        <li class="main-languages-item">Turkish:<div><span class="star checked">&#9733;&#9733;&#9733;</span><span class="star">&#9733;&#9733;</span></div></li>
+                        <li class="main-languages-item">English:<div><span class="star checked">&#9733;</span><span class="star">&#9733;&#9733;&#9733;&#9733;</span></div></li>
+                     </ul>
                   </section>
                </div>
-               <section class="main-contacts-info red-bottom">
-                  <h2 class="main-contacts-title">CONTACTS</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.</p>
+               <section class="main-skills-info red-bottom main-sections">
+                  <h2 class="main-skills-title main-titles">SKILLS</h2>
+                  <ul class="main-skills-list">
+                     <li class="main-skills-item">HTML, CSS</li>
+                     <li class="main-skills-item">JS (basic)</li>
+                     <li class="main-skills-item">Git, GitHub</li>
+                     <li class="main-skills-item">Figma, Adobe Photoshop</li>
+                  </ul>
                </section>
             </div>
          </div>
          <div class="right-column column-white">
             <section class="main-contacts-info right-section">
-               <h2 class="main-contacts-title">CONTACTS</h2>
+               <h2 class="main-contacts-title main-titles">CONTACTS</h2>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.</p>
             </section>
          </div>
@@ -68,6 +81,7 @@
          <div class="footer-content content">
             <div class="left-column">
                <section class="footer-left">
+                  <h2>sdsdsdsd</h2>
                   <p class="footer-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quam ipsum vitae neque. Consectetur ullam nihil ducimus repellendus excepturi, ratione dolores officiis eligendi fuga magnam possimus obcaecati delectus doloribus facilis dolorem nam vitae cumque quisquam illo facere doloremque quos! Illum, dicta sequi facilis hic provident et voluptatum blanditiis. Consequatur, reprehenderit doloribus accusantium voluptates ipsam modi. Accusamus voluptatibus ipsa deserunt, itaque consequatur tenetur veniam nihil unde, porro accusantium placeat debitis eligendi dolor aliquam quidem quae ipsam inventore cum tempore fugiat, cumque quibusdam. Dolorum, adipisci atque! Autem, reiciendis ut a aliquam ab sapiente aut culpa odio maxime possimus voluptatum magni repellendus nostrum.</p>
                </section>
             </div>
