--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                <li class="header-item"><a href="#" class="header-link">ABOUT ME</a></li>
                <li class="header-item"><a href="#contacts" class="header-link">CONTACTS</a></li>
                <li class="header-item"><a href="#languages" class="header-link">LANGUAGES</a></li>
-               <li class="header-item"><a href="#" class="header-link">EDUCATION</a></li>
-               <li class="header-item"><a href="#" class="header-link">SKILLS</a></li>
+               <li class="header-item"><a href="#education" class="header-link">EDUCATION</a></li>
+               <li class="header-item"><a href="#skills" class="header-link">SKILLS</a></li>
             </ul>
          </nav>
          <div class="header-content">
@@ -59,7 +59,7 @@
                      </ul>
                   </section>
                </div>
-               <section class="main-skills-info red-bottom main-sections">
+               <section class="main-skills-info red-bottom main-sections" id="skills">
                   <h2 class="main-skills-title main-titles">SKILLS</h2>
                   <ul class="main-skills-list">
                      <li class="main-skills-item">HTML, CSS</li>
@@ -71,10 +71,36 @@
             </div>
          </div>
          <div class="right-column column-white">
-            <section class="main-contacts-info right-section">
-               <h2 class="main-contacts-title main-titles">CONTACTS</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure. Dignissimos, iusto perferendis cumque vitae a corporis alias, illum maiores id autem explicabo illo.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni ipsam similique corporis voluptatibus ad iure.</p>
-            </section>
+            <div class="right-column-content">
+               <section class="main-about-me main-sections">
+                  <h2 class="about-me-title main-titles-red">ABOUT ME</h2>
+                  <p class="about-me-text">I’m 22 years old and i live in Tashkent.
+                     My goal is to gain knowledge in the field of front-end development.</p>
+               </section>
+               <section class="main-education main-sections" id="education">
+                  <h2 class="education-title main-titles-red">EDUCATION</h2>
+                  <ul class="education-list">
+                     <li class="education-item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                     <li class="education-item">HTML and CSS Tutorials on the w3schools (in progress)</li>
+                  </ul>   
+               </section>
+               <section class="main-code-example main-sections">
+                  <h2 class="code-example-title main-titles-red">CODE EXAMPLE</h2>
+                  <div class="code-example-block">
+                     <code>
+                        <span class="litblue">writeRandomQuote</span>= <span class="lightgreen">function</span>(){<br>
+                        <span class="lightgreen">var</span> <span class="red">quotes</span> <span class="orange">= new</span> <span class="violet">Array</span> ();<br>
+                        <span class="red">quotes</span>[0] = <span class="green">"Action is the real measure of intelligence."</span>;<br>
+                        <span class="red">quotes</span>[1] = <span class="green">"Baseball has the great advantage over cricket of being sooner ended."</span>;<br>
+                        <span class="red">quotes</span>[2] = <span class="green">"A good head and a good heart are always a formidable combination."</span>;<br>
+                        <span class="lightgreen">var</span> <span class="red">rand</span> = <span class="lightgreen">Math</span>.<span class="litblue">floor</span>(<span class="lightgreen">Math</span>.<span class="litblue">random()</span>*<span class="red">quotes</span>.<span class="orange">length</span>);
+                        <span class="lightgreen">document.</span><span class="litblue">write(</span><span class="red">quotes</span>[<span class="red">rand</span>]);<br>
+                        }<br>
+                        <span class="litblue">writeRandomQuote</span>();
+                     </code>
+                  </div>
+               </section>
+            </div>
          </div>
       </main>
       <footer class="footer">
