feat: add footer, add footer logo

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                <section class="main-skills-info red-bottom main-sections" id="skills">
                   <h2 class="main-skills-title main-titles">SKILLS</h2>
                   <ul class="main-skills-list">
-                     <li class="main-skills-item">HTML, CSS</li>
-                     <li class="main-skills-item">JS (basic)</li>
-                     <li class="main-skills-item">Git, GitHub</li>
-                     <li class="main-skills-item">Figma, Adobe Photoshop</li>
+                     <li class="main-skills-item">HTML, CSS<div><span class="star checked">&#9733;&#9733;</span><span class="star">&#9733;&#9733;&#9733;</span></div></li>
+                     <li class="main-skills-item">JS (basic)<div><span class="star checked">&#9733;</span><span class="star">&#9733;&#9733;&#9733;&#9733;</span></div></li>
+                     <li class="main-skills-item">Git, GitHub<div><span class="star checked">&#9733;&#9733;</span><span class="star">&#9733;&#9733;&#9733;</span></div></li>
+                     <li class="main-skills-item">Figma, Adobe Photoshop<div><span class="star checked">&#9733;&#9733;&#9733;</span><span class="star">&#9733;&#9733;</span></div></li>
                   </ul>
                </section>
             </div>
@@ -105,12 +105,11 @@
       </main>
       <footer class="footer">
          <div class="footer-content content">
-            <div class="left-column">
-               <section class="footer-left">
-                  <h2>sdsdsdsd</h2>
-                  <p class="footer-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quam ipsum vitae neque. Consectetur ullam nihil ducimus repellendus excepturi, ratione dolores officiis eligendi fuga magnam possimus obcaecati delectus doloribus facilis dolorem nam vitae cumque quisquam illo facere doloremque quos! Illum, dicta sequi facilis hic provident et voluptatum blanditiis. Consequatur, reprehenderit doloribus accusantium voluptates ipsam modi. Accusamus voluptatibus ipsa deserunt, itaque consequatur tenetur veniam nihil unde, porro accusantium placeat debitis eligendi dolor aliquam quidem quae ipsam inventore cum tempore fugiat, cumque quibusdam. Dolorum, adipisci atque! Autem, reiciendis ut a aliquam ab sapiente aut culpa odio maxime possimus voluptatum magni repellendus nostrum.</p>
-               </section>
-            </div>
+            <ul class="footer-list">
+               <li class="footer-item"><a href="https://rs.school/js/" class="footer-link"><img src="./assets/rsschool_logo.svg" alt="RSSchool Logo" class="footer-img"></a></li>
+               <li class="footer-item">&#169; 2022</li>
+               <li class="footer-item"><a href="https://github.com/SultanbaevS/" class="footer-link"><img src="./assets/GitHub-Mark-120px-plus.png" alt="GitHub logo" class="footer-img-git"></a></li>
+            </ul>
          </div>
       </footer>
    </div>
