feat: header image and styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          </nav>
          <div class="header-content">
             <div class="left-column">
-               <div class="header-image"><img src="#" alt="My Photo" class="header-img">
+               <div class="header-image"><img src="./assets/20220531_062614.jpg" alt="My Photo" class="header-img">
                </div>
             </div>
             <div class="right-column">
