--- a/index.html
+++ b/index.html
@@ -72,19 +72,23 @@
          </div>
          <div class="right-column column-white">
             <div class="right-column-content">
-               <section class="main-about-me main-sections">
+               <section class="main-about-me main-sections-right">
                   <h2 class="about-me-title main-titles-red">ABOUT ME</h2>
                   <p class="about-me-text">I’m 22 years old and i live in Tashkent.
                      My goal is to gain knowledge in the field of front-end development.</p>
                </section>
-               <section class="main-education main-sections" id="education">
+               <section class="main-education main-sections-right" id="education">
                   <h2 class="education-title main-titles-red">EDUCATION</h2>
                   <ul class="education-list">
                      <li class="education-item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
                      <li class="education-item">HTML and CSS Tutorials on the w3schools (in progress)</li>
                   </ul>   
                </section>
-               <section class="main-code-example main-sections">
+               <section class="main-projects main-sections-right" id="projects">
+                  <h2 class="projects-title main-titles-red">PROJECTS</h2> 
+                  <a class="projects-link" href="https://sultanbaevs.github.io/rsschool-cv/cv">Markdown & Git</a>
+               </section>
+               <section class="main-code-example main-sections-right">
                   <h2 class="code-example-title main-titles-red">CODE EXAMPLE</h2>
                   <div class="code-example-block">
                      <code>
