--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>RSSchool CV</title>
+   <link type="image/png" sizes="16x16" rel="icon" href="icon.png">
    <link rel="preconnect" href="https://spans.googleapis.com">
    <link rel="preconnect" href="https://spans.gstatic.com" crossorigin>
    <link href="https://spans.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
